--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build 🏗️
         run: poetry run python build.py
         env:
-          BASE_NAME: /cook
+          BASE_NAME: /PapasKiss
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
